--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -182,7 +182,7 @@
                     android:text="Bạn không có tài khoản?" />
 
                 <TextView
-                    android:id="@+id/textView0"
+                    android:id="@+id/signupBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="0"
