--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -53,15 +53,31 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/userEdt"
+                android:id="@+id/userNameEdt"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
+                android:layout_weight="1"
                 android:background="@drawable/edittext_background"
                 android:ems="10"
-                android:hint="Email address"
+                android:hint="Nhập tên đăng nhập"
+                android:inputType="text"
+                android:textAlignment="center"
+                android:textColorHint="@color/blue_grey"
+                android:textSize="16sp" />
+
+            <EditText
+                android:id="@+id/userEdt"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="32dp"
+                android:background="@drawable/edittext_background"
+                android:ems="10"
+                android:hint="Nhập email"
                 android:inputType="text"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
@@ -76,7 +92,7 @@
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/edittext_background"
                 android:ems="10"
-                android:hint="Password"
+                android:hint="Nhập mật khẩu"
                 android:inputType="textPassword"
                 android:textAlignment="center"
                 android:textColorHint="@color/blue_grey"
