--- a/app/src/main/res/layout/viewholder_best_deal.xml
+++ b/app/src/main/res/layout/viewholder_best_deal.xml
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toBottomOf="@+id/pic">
 
             <TextView
-                android:id="@+id/titleTxt"
+                android:id="@+id/orderId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -39,7 +39,7 @@
                 android:textColor="@color/blue_grey"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toStartOf="@+id/priceTxt"
+                app:layout_constraintEnd_toStartOf="@+id/orderDate"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +52,7 @@
                 android:text="4"
                 android:textColor="@color/blue_grey"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/titleTxt" />
+                app:layout_constraintStart_toStartOf="@+id/orderId" />
 
             <ImageView
                 android:id="@+id/imageView6"
@@ -98,7 +98,7 @@
                 app:tint="@color/red" />
 
             <TextView
-                android:id="@+id/priceTxt"
+                android:id="@+id/orderDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
@@ -106,9 +106,9 @@
                 android:textStyle="bold"
                 android:textColor="@color/red"
                 android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="@+id/titleTxt"
+                app:layout_constraintBottom_toBottomOf="@+id/orderId"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/titleTxt" />
+                app:layout_constraintTop_toTopOf="@+id/orderId" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
