--- a/app/src/main/res/layout/viewholder_cart.xml
+++ b/app/src/main/res/layout/viewholder_cart.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/titleTxt"
+            android:id="@+id/orderId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -37,18 +37,18 @@
             app:layout_constraintTop_toTopOf="@+id/pic" />
 
         <TextView
-            android:id="@+id/totalEachItem"
+            android:id="@+id/orderDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="$0"
             android:textColor="@color/blue_grey"
             android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/titleTxt"
-            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
+            app:layout_constraintStart_toStartOf="@+id/orderId"
+            app:layout_constraintTop_toBottomOf="@+id/orderId" />
 
         <TextView
-            android:id="@+id/feeEachItem"
+            android:id="@+id/totalPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -63,7 +63,7 @@
             android:layout_width="90dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/pic"
-            app:layout_constraintStart_toStartOf="@+id/totalEachItem">
+            app:layout_constraintStart_toStartOf="@+id/orderDate">
 
             <TextView
                 android:id="@+id/minusCartBtn"
