--- a/app/src/main/res/layout/activity_detail_history.xml
+++ b/app/src/main/res/layout/activity_detail_history.xml
@@ -6,10 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".Activity.OrderHistory">
+    tools:context=".Activity.DetailHistory">
 
     <ScrollView
-        android:id="@+id/scrollView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,10 +19,11 @@
             android:padding="16dp">
 
             <TextView
+                android:id="@+id/backBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Lịch sử đơn hàng"
+                android:text="Chi tiết đơn hàng"
                 android:textColor="@color/blue_grey"
                 android:textSize="24sp"
                 android:textStyle="bold" />
@@ -36,7 +36,7 @@
     </ScrollView>
 
     <ImageView
-        android:id="@+id/backBtn"
+        android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -44,5 +44,4 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/arrow" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
