--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,7 +69,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/filterBtn"
+                    android:id="@+id/HistoryBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="50dp"
                     android:layout_marginEnd="6dp"
