--- a/app/src/main/res/layout/viewholder_cart.xml
+++ b/app/src/main/res/layout/viewholder_cart.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/orderId"
+            android:id="@+id/titleTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -44,8 +44,8 @@
             android:text="$0"
             android:textColor="@color/blue_grey"
             android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="@+id/orderId"
-            app:layout_constraintTop_toBottomOf="@+id/orderId" />
+            app:layout_constraintStart_toStartOf="@+id/titleTxt"
+            app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
 
         <TextView
             android:id="@+id/totalPrice"
