--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -150,7 +150,7 @@
                     app:srcCompat="@drawable/facebook" />
 
                 <ImageView
-                    android:id="@+id/google"
+                    android:id="@+id/googleBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
