--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -110,11 +110,12 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/loginBtn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Quên mật khẩu"
+                android:text="Đăng nhập"
+                android:textColor="@color/red"
                 android:textAlignment="center"
                 android:textSize="16sp" />
         </LinearLayout>
