--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -31,7 +31,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/cardView"
                 android:layout_width="match_parent"
-                android:layout_height="450dp" />
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
     </ScrollView>
